unpackaged/main/default/objects/ACH_Payment__c/ACH_Payment__c.object-meta.xml
<CustomObject>
    <description>This object will be a repository for all ACH payments recorded for lease vendors and working capital customers.</description>
    <label>ACH Payment</label>
    <nameField>
        <displayFormat>ACH # {0}</displayFormat>
        <label>ACH Payment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>