unpackaged/main/default/objects/ACH_Payment__c/fields/ACH_File_Generated__c.field-meta.xml
<CustomField>
    <fullName>ACH_File_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate that an ACH file was generated for a specific customer and/or other ACH payment recipients.</description>
    <inlineHelpText>This field will indicate that an ACH file was generated for a specific customer and/or other ACH payment recipients.</inlineHelpText>
    <label>ACH File Generated</label>
    <type>Checkbox</type>
</CustomField>