unpackaged/main/default/objects/ACH_Payment__c/fields/ACH_File_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>ACH_File_Generated_Date__c</fullName>
    <description>This field will indicate what date an ACH file was generated for the customer and/or other ACH payment recipients.</description>
    <inlineHelpText>This field will indicate what date an ACH file was generated for the customer and/or other ACH payment recipients.</inlineHelpText>
    <label>ACH File Generated Date</label>
    <type>DateTime</type>
</CustomField>