unpackaged/main/default/objects/ACH_Payment__c/fields/ACH_Payment__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACH Payment</label>
    <referenceTo>ACH_Payment__c</referenceTo>
    <relationshipLabel>ACH Payments</relationshipLabel>
    <relationshipName>ACH_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>