unpackaged/main/default/objects/ACH_Payment__c/fields/ACH_Rejected__c.field-meta.xml
<CustomField>
    <fullName>ACH_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if an ACH payment is rejected and needs to be re-processed by creating a New ACH Payment.</description>
    <inlineHelpText>This field will indicate if an ACH payment is rejected and needs to be re-processed by creating a New ACH Payment.</inlineHelpText>
    <label>ACH Rejected</label>
    <type>Checkbox</type>
</CustomField>