unpackaged/main/default/objects/ACH_Payment__c/fields/ACH_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>ACH_Rejected_Reason__c</fullName>
    <description>This field will indicate what party rejected an ACH Payment. When the field is completed, a notification should be sent out to the funder and/or rep to gather further information.</description>
    <inlineHelpText>This field will indicate what party rejected an ACH Payment. When the field is completed, a notification should be sent out to the funder and/or rep to gather further information.</inlineHelpText>
    <label>ACH Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH Rejected by Customer</fullName>
            </value>
            <value>
                <fullName>Incorrect Account Name</fullName>
            </value>
            <value>
                <fullName>Invalid Routing Number</fullName>
            </value>
            <value>
                <fullName>Invalid Account Number</fullName>
            </value>
            <value>
                <fullName>Cancelled - Customer Needs Wire</fullName>
            </value>
            <value>
                <fullName>Cancelled - Deal Unwound</fullName>
            </value>
            <value>
                <fullName>Cancelled - Loan Booked in Fundingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>