unpackaged/main/default/objects/ACH_Payment__c/fields/BofI_Deal__c.field-meta.xml
<CustomField>
    <fullName>BofI_Deal__c</fullName>
    <formula>TEXT( Opportunity__r.BofI_Deal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BofI Deal</label>
    <type>Text</type>
</CustomField>