unpackaged/main/default/objects/ACH_Payment__c/fields/Create_ACH_File_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_ACH_File_Date__c</fullName>
    <label>Create ACH File Date</label>
    <type>Date</type>
</CustomField>