unpackaged/main/default/objects/ACH_Payment__c/fields/Flow_Label__c.field-meta.xml
<CustomField>
    <fullName>Flow_Label__c</fullName>
    <formula>NF_Lease_Loan_Number__c &amp; ' - ' &amp; TEXT(Payment_Type__c) &amp; ' - ' &amp;  Receiving_Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Label</label>
    <type>Text</type>
</CustomField>