unpackaged/main/default/objects/ACH_Payment__c/fields/Funder_Email__c.field-meta.xml
<CustomField>
    <fullName>Funder_Email__c</fullName>
    <description>Funder Email for ACH Payment Rejection Notice.</description>
    <inlineHelpText>Funder Email for ACH Payment Rejection Notice.</inlineHelpText>
    <label>Funder Email</label>
    <type>Email</type>
</CustomField>