unpackaged/main/default/objects/ACH_Payment__c/fields/Lease_or_Loan__c.field-meta.xml
<CustomField>
    <fullName>Lease_or_Loan__c</fullName>
    <description>This will indicate if the payments are being made for a lease or working capital transaction.</description>
    <inlineHelpText>This will indicate if the payments are being made for a lease or working capital transaction.</inlineHelpText>
    <label>Lease or Working Capital</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>