unpackaged/main/default/objects/ACH_Payment__c/fields/NACHA_File_Generated__c.field-meta.xml
<CustomField>
    <fullName>NACHA_File_Generated__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(NACHA_FileLog__r.Status__c,'Generated'),
ACH_File_Generated__c = TRUE
),
TRUE, 
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NACHA File Generated</label>
    <type>Checkbox</type>
</CustomField>