unpackaged/main/default/objects/ACH_Payment__c/fields/NACHA_File_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>NACHA_File_Generated_Date__c</fullName>
    <formula>IF(
ACH_File_Generated__c = TRUE,
ACH_File_Generated_Date__c,
NACHA_FileLog__r.File_Generated__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NACHA File Generated Date</label>
    <type>DateTime</type>
</CustomField>