unpackaged/main/default/objects/ACH_Payment__c/fields/NACHA_FileLog__c.field-meta.xml
<CustomField>
    <fullName>NACHA_FileLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NACHA FileLog</label>
    <referenceTo>NACHA_FileLog__c</referenceTo>
    <relationshipLabel>ACH Payments</relationshipLabel>
    <relationshipName>ACH_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>