unpackaged/main/default/objects/ACH_Payment__c/fields/NF_Lease_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>NF_Lease_Loan_Number__c</fullName>
    <description>This field will correspond to CCD Entry Detail Record Field 7 (Company Discretionary Data) in the NACHA File.  It will contain the Lease or Loan Number that the ACH payment is being generated for.</description>
    <inlineHelpText>Please enter the associated customer's Lease or Loan Number.</inlineHelpText>
    <label>NF Lease/Loan Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>