unpackaged/main/default/objects/ACH_Payment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>This field will indicate the opportunity that the ACH payments are associated with.</description>
    <inlineHelpText>This field will indicate the opportunity that the ACH payments are associated with.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ACH Payments</relationshipLabel>
    <relationshipName>ACH_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>