unpackaged/main/default/objects/ACH_Payment__c/fields/Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Email__c</fullName>
    <description>Opportunity Owner Email for ACH Payment Rejection Notice.</description>
    <inlineHelpText>Opportunity Owner Email for ACH Payment Rejection Notice.</inlineHelpText>
    <label>Opportunity Owner Email</label>
    <type>Email</type>
</CustomField>