unpackaged/main/default/objects/ACH_Payment__c/fields/Organization_s_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Organization_s_Bank_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization's Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>ACH Payments (Organization's Bank Account)</relationshipLabel>
    <relationshipName>ACH_Payments1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>