unpackaged/main/default/objects/ACH_Payment__c/fields/Pay_On_This_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_On_This_Date__c</fullName>
    <label>Pay On This Date</label>
    <type>Date</type>
</CustomField>