unpackaged/main/default/objects/ACH_Payment__c/fields/Payee_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Payee_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee's Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker, Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>ACH Payments</relationshipLabel>
    <relationshipName>ACH_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>