unpackaged/main/default/objects/ACH_Payment__c/fields/Payee_s_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Payee_s_Account_Type__c</fullName>
    <description>This field will contain the type of account the funds will be deposited into.</description>
    <inlineHelpText>This field will contain the type of account the funds will be deposited into.</inlineHelpText>
    <label>Payee's Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
                <default>true</default>
                <label>Checking</label>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>