unpackaged/main/default/objects/ACH_Payment__c/fields/Payee_s_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Payee_s_Bank_Account_Number__c</fullName>
    <description>This field will contain the Bank Account Number for the payee.</description>
    <inlineHelpText>This field will contain the Bank Account Number for the payee.</inlineHelpText>
    <label>Payee's Bank Account Number</label>
    <length>17</length>
    <type>Text</type>
</CustomField>