unpackaged/main/default/objects/ACH_Payment__c/fields/Payee_s_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_s_Bank_Name__c</fullName>
    <description>This field will contain the name of the Payee's bank.</description>
    <inlineHelpText>This field will contain the name of the Payee's bank.</inlineHelpText>
    <label>Payee's Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>