unpackaged/main/default/objects/ACH_Payment__c/fields/Payee_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_s_Name__c</fullName>
    <description>This field will contain the name of the company/person that will be receiving the funds.</description>
    <inlineHelpText>This field will contain the name of the company/person that will be receiving the funds.</inlineHelpText>
    <label>Payee's Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>