unpackaged/main/default/objects/ACH_Payment__c/fields/Payee_s_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Payee_s_Routing_Number__c</fullName>
    <description>This field will contain the routing number for the payee.</description>
    <inlineHelpText>This field will contain the routing number for the payee.</inlineHelpText>
    <label>Payee's Routing Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>