unpackaged/main/default/objects/ACH_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Funding</fullName>
            </value>
            <value>
                <fullName>Lender Payoff</fullName>
            </value>
            <value>
                <fullName>Axos - Customer Funding</fullName>
            </value>
            <value>
                <fullName>Axos - Lender Payoff</fullName>
            </value>
            <value>
                <fullName>Axos - Loan Purchase</fullName>
            </value>
            <value>
                <fullName>Broker Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>