unpackaged/main/default/objects/ACH_Payment__c/fields/Receiving_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Company_Name__c</fullName>
    <description>This field will correspond to CCD Entry Detail Record field #8.  This will field should contain the name of the recipient of the payment.  (A maximum of 22 characters are allowed)</description>
    <inlineHelpText>This will field should contain the name of the recipient of the payment.  (A maximum of 22 characters are allowed)</inlineHelpText>
    <label>Receiving Company Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>