unpackaged/main/default/objects/ACH_Payment__c/fields/Sum_ACH_Existing_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Sum_ACH_Existing_Loan_Balance__c</fullName>
    <description>This field will calculate total of ACH payments + the amount of the existing loan balance being paid to complete a prior agreement.</description>
    <formula>Opportunity__r.WC_ACH_Payments_Sum__c + Opportunity__r.Current_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will calculate total of ACH payments + the amount of the existing loan balance being paid to complete a prior agreement.</inlineHelpText>
    <label>Sum ACH + Existing Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>