unpackaged/main/default/objects/ACH_Payment__c/fields/Sum_of_ACH_Payments__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_ACH_Payments__c</fullName>
    <description>This field will be the total amount of payments set to be paid out associated with an opportunity.</description>
    <formula>Opportunity__r.WC_ACH_Payments_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be the total amount of payments set to be paid out associated with an opportunity.</inlineHelpText>
    <label>Sum of ACH Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>