unpackaged/main/default/objects/ACH_Payment__c/recordTypes/Broker_Internal.recordType-meta.xml
<RecordType>
    <fullName>Broker_Internal</fullName>
    <active>true</active>
    <label>Broker/Internal</label>
</RecordType>