unpackaged/main/default/objects/ACH_Payment__c/validationRules/Broker_ACH_Pymt_Recipient_must_be_Broker.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_ACH_Pymt_Recipient_must_be_Broker</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity__r.RecordType.Name = 'Broker WC Oppty' &amp;&amp; 
RecordType.Name = 'Broker/Internal' &amp;&amp; 
Payee_Bank_Account__r.Name &lt;&gt; 'National Funding' &amp;&amp; 
Payee_Bank_Account__r.Name &lt;&gt; 'BOFI FEDERAL BANK' &amp;&amp; 
Payee_Bank_Account__r.Account__r.Id &lt;&gt; Opportunity__r.Broker_Account__r.Id</errorConditionFormula>
    <errorMessage>The Payee's Bank Account must be associated to the Broker Account that is given on the Opportunity screen.</errorMessage>
</ValidationRule>