unpackaged/main/default/objects/ACH_Payment__c/validationRules/Cannot_edit_broker_payee_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_broker_payee_fields</fullName>
    <active>true</active>
    <description>Must have the custom setting ValidationRules__c --&gt; Edit_Payee_ACH_Payment_Info__c</description>
    <errorConditionFormula>AND(
	NOT(ISNEW()),
	$Setup.ValidationRules__c.Edit_Payee_ACH_Payment_Info__c = False,
	RecordType.DeveloperName = 'Broker_Internal',
	OR(
		ISCHANGED(Payee_s_Account_Type__c),
		ISCHANGED(Payee_s_Bank_Account_Number__c),
		ISCHANGED(Payee_s_Bank_Name__c),
		ISCHANGED(Payee_s_Routing_Number__c)
		)
	)</errorConditionFormula>
    <errorMessage>You don't have the permission to update payee fields. Please reach out to helpdesk for support if you need to modify it.</errorMessage>
</ValidationRule>