unpackaged/main/default/objects/ACH_Payment__c/validationRules/Rejected_ACH_Payment_Must_Have_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_ACH_Payment_Must_Have_Reason</fullName>
    <active>true</active>
    <description>This validation rule impose that a reason be entered when an ACH Payment is marked as rejected.</description>
    <errorConditionFormula>(ACH_Rejected__c = True &amp;&amp; ISBLANK(TEXT(ACH_Rejected_Reason__c)))</errorConditionFormula>
    <errorMessage>Please enter the Reason that the ACH Payment was rejected.</errorMessage>
</ValidationRule>