unpackaged/main/default/objects/ACH_Payment__c/validationRules/Routing_Number_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Routing_Number_Characters</fullName>
    <active>true</active>
    <description>This validation rule will ensure 9 digits were entered into the routing number field.</description>
    <errorConditionFormula>LEN( Payee_s_Routing_Number__c ) &lt;&gt; 9</errorConditionFormula>
    <errorMessage>The number of digits in the Payee's Routing Number must be 9.</errorMessage>
</ValidationRule>